fix: optimize import3